# ScanControl

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/routers/: conciliacao.py  produtos.py  recebimentos.py  relatorio.py  sessao.py
app/templates/: auditoria.html  coletor.html  manifest.json  service-worker.js
tests/: README.md  __init__.py  conftest.py  test_main.py  test_produtos.py  test_recebimentos.py  test_relatorio.py  test_schemas.py  test_sessao.py
