[project]
name = "scanner-logistico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.128.5",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    'reportlab>=4.4.10,<5.0.0; python_version < "4"',
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "psycopg2-binary>=2.9.7" 
]
