[project]
name = "scanner-logistico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.128.5",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    'reportlab>=4.4.10,<5.0.0; python_version < "4"',
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "psycopg2-binary>=2.9.7",
    "pdfplumber>=0.11.9",
    "opencv-python>=4.13.0.92",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
]
